<resources>
    <string name="app_name">FlowX</string>
    <string name="contact_image">Contact image</string>
    <string name="contacts">Contacts</string>
    <string name="status">Status</string>
    <string name="settings">Settings</string>

    <string name="about">About</string>
    <string name="picture">Picture</string>
    <string name="image">Image</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="file">File</string>
    <string name="error">An error occurred.</string>

    <string name="image_viewer">Image Viewer</string>

    <string name="notification">Notification</string>
    <string name="notification_vibrate_title">Vibrate</string>
    <string name="notification_vibrate_summary">Whether to vibrate or not when a new message is received.</string>
    <string name="notification_led_title">LED</string>
    <string name="notification_led_summary">Whether to use the led or not.</string>
    <string name="notification_ringtone_title">Ringtone</string>
    <string name="notification_ringtone_silent">None</string>

    <string name="logged_in_as">Logged in as %1$s</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    <string name="contact">Contact</string>
    <string name="license">License</string>
    <string name="flowx_messenger">FlowX Messenger</string>
    <string name="fx_desc">FlowX Messenger. An XMPP based messenger for Android.</string>
    <string name="fx_copyright" translatable="false">Copyright &#169; 2014&#8211;2016 FlowX Inc.</string>
    <string name="fx_url" translatable="false">&#183; www.flowx.im</string>
    <string name="fx_mail" translatable="false">&#183; support@flowx.im</string>
    <string name="fx_dev">Developers</string>
    <string name="fx_dev_n" translatable="false">&#183; Dominic Schubert
        \n&#183; Tom Janke
        \n&#183; Dominik Wagner</string>
    <string name="fx_license" translatable="false">
        This program is free software: you can redistribute it and/or modify
        it under the terms of the GNU General Public License as published by
        the Free Software Foundation, either version 3 of the License, or
        (at your option) any later version.\n
        \nThis program is distributed in the hope that it will be useful,
        but WITHOUT ANY WARRANTY; without even the implied warranty of
        MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
        GNU General Public License for more details.\n
        \nYou should have received a copy of the GNU General Public License
        along with this program. If not, see http://www.gnu.org/licenses/.</string>
    <string name="fx_orig_code">Source Code</string>
    <string name="fx_orig_code_url" translatable="false">&#183; http://github.com/atomarea/FlowX</string>

    <string name="activity_login">FlowX Login</string>

    <string name="unread_messages">You have %1$d unread messages</string>

    <string name="state_writing">composing&#8230;</string>

    <string name="remove_contact">Remove contact</string>

    <string name="action_add_contact">Add</string>
    <string name="title_add_contact">Add a contact</string>

    <string name="action_rename_contact">Rename</string>
    <string name="title_rename_contact">Rename contact</string>

    <string name="action_proceed">Proceed anyway</string>
    <string name="title_proceed">Warning!</string>

    <string name="warn_storage_permission">If you don\'t grant the storage permission, you will not be able to see profile pictures and receive media.</string>

    <string name="emoji_button">Emoji button</string>
    <string name="bold_button">Bold</string>
    <string name="italic_button">Italic</string>
    <string name="underline_button">Underline</string>

</resources>
