<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:emojicon="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.activities.ChatHistoryActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:id="@+id/root_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/chat_history"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/chat_bar_bottom"
            android:scrollbars="vertical" />

        <RelativeLayout
            android:id="@+id/chat_bar_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/standard_padding"
            android:paddingLeft="@dimen/standard_padding"
            android:paddingRight="@dimen/standard_padding"
            android:paddingTop="@dimen/standard_extra_small_padding">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="80dp"
                android:layout_marginRight="80dp"
                android:elevation="1dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:orientation="vertical"
                    android:padding="@dimen/standard_small_padding">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/bold_button"
                            android:layout_width="22dp"
                            android:layout_height="22dp"
                            android:layout_gravity="center_vertical"
                            android:background="?selectableItemBackgroundBorderless"
                            android:contentDescription="@string/bold_button"
                            android:onClick="onFormatButtonClick"
                            android:src="@drawable/ic_format_bold_black_24dp"
                            android:tint="@android:color/secondary_text_light" />

                        <ImageView
                            android:id="@+id/italic_button"
                            android:layout_width="22dp"
                            android:layout_height="22dp"
                            android:layout_gravity="center_vertical"
                            android:background="?selectableItemBackgroundBorderless"
                            android:contentDescription="@string/italic_button"
                            android:onClick="onFormatButtonClick"
                            android:src="@drawable/ic_format_italic_black_24dp"
                            android:tint="@android:color/secondary_text_light" />

                        <ImageView
                            android:id="@+id/underline_button"
                            android:layout_width="22dp"
                            android:layout_height="22dp"
                            android:layout_gravity="center_vertical"
                            android:background="?selectableItemBackgroundBorderless"
                            android:contentDescription="@string/underline_button"
                            android:onClick="onFormatButtonClick"
                            android:src="@drawable/ic_format_underlined_black_24dp"
                            android:tint="@android:color/secondary_text_light" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/emojicon_button"
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            android:layout_gravity="center_vertical"
                            android:background="?selectableItemBackgroundBorderless"
                            android:contentDescription="@string/emoji_button"
                            android:onClick="onEmojiButtonClick"
                            android:src="@drawable/ic_insert_emoticon_black_24dp"
                            android:tint="@android:color/secondary_text_light" />

                        <github.ankushsachdeva.emojicon.EmojiconEditText
                            android:id="@+id/edit_message"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:inputType="textMultiLine"
                            android:maxLines="4"
                            android:textColor="@android:color/primary_text_light"
                            android:textSize="16sp"
                            emojicon:emojiconSize="22sp" />

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </RelativeLayout>

    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_send_white_24dp" />

</android.support.design.widget.CoordinatorLayout>
